--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@emclaug2/lib",
+  "name": "ui-kit",
   "version": "0.0.1",
   "description": "Stencil Component Starter",
   "main": "dist/index.cjs.js",
@@ -9,36 +9,40 @@
   "types": "dist/custom-elements/index.d.ts",
   "collection": "dist/collection/collection-manifest.json",
   "collection:main": "dist/collection/index.js",
-  "unpkg": "dist/test/test.esm.js",
+  "unpkg": "dist/ui-kit/ui-kit.esm.js",
   "files": [
     "dist/",
     "loader/"
   ],
   "scripts": {
-    "build": "stencil build --docs",
-    "build:watch": "stencil build --watch --docs",
-    "start": "stencil build --dev --watch --serve",
-    "test": "stencil test --spec --e2e",
-    "test.watch": "stencil test --spec --e2e --watchAll",
+    "build-stencil": "stencil build --docs",
+    "build-stencil:watch": "stencil build --docs-readme --watch --serve",
+    "start-stencil": "stencil build --dev --watch --serve",
+    "test-stencil": "stencil test --spec --e2e",
+    "test-stencil.watch": "stencil test --spec --e2e --watchAll",
     "generate": "stencil generate",
-    "storybook": "start-storybook -p 6006 -s dist",
-    "build-storybook": "build-storybook -c ./.storybook -o ../public"
+    "start-storybook": "start-storybook -p 6006 -s dist --no-manager-cache",
+    "prebuild-storybook": "npm run build-stencil",
+    "build-storybook": "build-storybook -o ./distStorybook",
+    "predeploy-storybook": "npm run build-storybook",
+    "deploy-storybook": "storybook-to-aws-s3 --existing-output-dir ./distStorybook --bucket-path <AWS_BUCKET_PATH>",
+    "clean": "rimraf dist && rimraf distStorybook"
   },
   "dependencies": {
-    "@stencil/core": "^2.0.1"
+    "@stencil/core": "^2.5.2",
+    "clsx": "^1.1.1"
   },
   "license": "MIT",
   "devDependencies": {
-    "@babel/core": "^7.13.16",
-    "@storybook/html": "^6.2.8",
-    "@storybook/addon-actions": "^6.2.8",
-    "@storybook/addon-essentials": "^6.2.8",
-    "@storybook/addon-links": "^6.2.8",
-    "@storybook/addon-storysource": "^6.2.8",
+    "@babel/core": "^7.13.10",
+    "@storybook/addon-actions": "^6.1.21",
+    "@storybook/addon-essentials": "^6.1.21",
+    "@storybook/addon-links": "^6.1.21",
+    "@storybook/html": "^6.1.21",
+    "@storybook/react": "^6.1.21",
+    "@storybook/storybook-deployer": "^2.8.7",
     "babel-loader": "^8.2.2",
-    "copy-webpack-plugin": "^6.4.1",
-    "lit-html": "^1.3.0",
-    "npm-run-all": "^4.1.5",
-    "write-file-webpack-plugin": "^4.5.1"
+    "prettier": "^2.0.5",
+    "rimraf": "^3.0.2"
   }
 }
